--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/platform-fastify": "^7.6.12",
+    "avatarbox.sdk": "file:../sdk",
+    "express-jwt": "^6.0.0",
+    "jwks-rsa": "^1.12.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
