--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@nestjs/platform-fastify": "^7.6.12",
     "avatarbox.sdk": "file:../sdk",
     "express-jwt": "^6.0.0",
+    "fastify-file-upload": "^3.0.0",
     "jwks-rsa": "^1.12.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.3"
+    "rxjs": "^6.6.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.5.1",
