--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "@nestjs/core": "^7.5.1",
     "@nestjs/platform-express": "^7.5.1",
     "@nestjs/platform-fastify": "^7.6.12",
-    "avatarbox.sdk": "file:../sdk",
+    "@types/bcrypt": "^3.0.0",
+    "@types/mysql": "^2.15.18",
+    "@types/node": "^13.13.45",
+    "avatarbox.sdk": "0.0.4",
     "express-jwt": "^6.0.0",
     "fastify-file-upload": "^3.0.0",
+    "grav.client": "^2.4.20",
     "jwks-rsa": "^1.12.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
@@ -41,7 +45,6 @@
     "@nestjs/testing": "^7.5.1",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.6",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
