finalize tests for removePrimaryImage method; mock client + req/res

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,10 @@
     "target": "es2017",
     "sourceMap": true,
     "outDir": "./Release",
-    "incremental": true
+    "incremental": true,
+    "types": [
+      "node",
+      "jest"
+    ]
   }
 }
