--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^13.13.45",
     "avatarbox.sdk": "^1.0.1",
     "express-jwt": "^6.0.0",
+    "express-jwt-authz": "^2.4.1",
     "fastify-file-upload": "^3.0.0",
     "grav.client": "^2.4.21",
     "jwks-rsa": "^1.12.2",
